DVJ-14 Added code upload, running code against set solution files. Added correctness checking. Added tests for the functionality

--- a/dvJudge/templates/show_entries.html
+++ b/dvJudge/templates/show_entries.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
+  <dd><a href="upload">UPLOAD CODE</a>
   {% if session.logged_in %}
     <form action="{{ url_for('add_entry') }}" method=post class=add-entry>
       <dl>
