DVJ-34 begin making challenge db infrastucture

--- a/dvJudge/templates/upload_code.html
+++ b/dvJudge/templates/upload_code.html
@@ -3,7 +3,8 @@
   {% if session.logged_in %}
     <form action="{{ url_for('upload_code') }}" method=post class=upload-code>
       <dl>
-        <dt>Paste some C code that prints out exactly '1 2 3 4 5':
+        <dt> {{ name }}
+          <p> {{ description }}
         {% if code %}
           <dd><textarea name=text rows=20 cols=60>{{ code }}</textarea>
         {% else %} 
