DVJ-34 DVJ-22 - Added functionality to save problems to the database - Added functionality to view problems saved in the database - Added functionality to attempt to submit solutions to problems in the database - Added tests for the above functionality

--- a/dvJudge/templates/browse.html
+++ b/dvJudge/templates/browse.html
@@ -1,9 +1,8 @@
 {% extends "layout.html" %}
 {% block body %}
   <ul class=challenges>
-  {% for challenge in challenges %}
-    <li><h2>{{ challenges.id }}</h2>
-      {{ challenges.name }}
+  {% for problem in challenges %}
+    <li><h2><a href="browse/{{ problem.id }}">{{ problem.id }} - {{ problem.name }}</a></h2>
   {% endfor %}
   </ul>
 {% endblock %}
