--- a/dvJudge/templates/show_entries.html
+++ b/dvJudge/templates/show_entries.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
   <dd><a href="upload">UPLOAD CODE</a>
+  <dd><a href="browse">BROWSE PROBLEMS</a>
   {% if session.logged_in %}
     <form action="{{ url_for('add_entry') }}" method=post class=add-entry>
       <dl>
