--- a/dvJudge/templates/problem.html
+++ b/dvJudge/templates/problem.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
 {% block body %}
   {% if session.logged_in %}
-    <form action="{{ url_for('upload_code') }}" method=post class=upload-code>
+    <form action="{{ url_for('submit_specific_problem', problem_id=problem_info.problem_id) }}" method=post class=problem>
       <dl>
-        <dt> {{ name }}
-          <p> {{ description }}
+        <dt> {{ problem_info.name }}
+          <p> {{ problem_info.description }}
         {% if code %}
           <dd><textarea name=text rows=20 cols=60>{{ code }}</textarea>
         {% else %} 
