Minor changes added to login page

--- a/dvJudge/templates/signup.html
+++ b/dvJudge/templates/signup.html
@@ -7,9 +7,9 @@
       <dt>Username:
       <dd><input type=text name=username value='{{username}}' required minlength="6" maclength="20">
       <dt>Email:
-      <dd><input type=email name=email value='{{email}}' required autocomplete="on">
+      <dd><input type=email name=email value='{{email}}' required autocomplete="on" id="exampleInputEmail1" placeholder="Email">
       <dt>Confirm Email:
-      <dd><input type=email name=confirmemail value='{{confirmemail}}' required autocomplete="on">
+      <dd><input type=email name=confirmemail value='{{confirmemail}}' required autocomplete="on" id="exampleInputEmail1" placeholder="Email">
       <dt>Password:
       <dd><input type=password name=password required>
       <dt>Confirm Password:
