--- a/dvJudge/templates/login.html
+++ b/dvJudge/templates/login.html
@@ -5,9 +5,9 @@
   <form action="{{ url_for('login') }}" method=post>
     <dl>
       <dt>Username:
-      <dd><input type=text name=username required>
+      <dd><input type=text name=username id="exampleInputEmail1" placeholder="Email" required>
       <dt>Password:
-      <dd><input type=password name=password required>
+      <dd><input type=password name=password id="exampleInputPassword1" placeholder="Password" required>
       <dd><input type=submit value=Login>
     </dl>
   </form>
