--- a/dvJudge/templates/signup.html
+++ b/dvJudge/templates/signup.html
@@ -4,16 +4,11 @@
   {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
   <form action="{{ url_for('signup') }}" method=post>
     <dl>
-      <dt>Username:
-      <dd><input type=text name=username value='{{username}}' required minlength="6" maclength="20">
-      <dt>Email:
+      <dd><input type=text name=username value='{{username}}' required  placeholder="Username">
       <dd><input type=email name=email value='{{email}}' required autocomplete="on" id="exampleInputEmail1" placeholder="Email">
-      <dt>Confirm Email:
-      <dd><input type=email name=confirmemail value='{{confirmemail}}' required autocomplete="on" id="exampleInputEmail1" placeholder="Email">
-      <dt>Password:
-      <dd><input type=password name=password required>
-      <dt>Confirm Password:
-      <dd><input type=password name=confirmpassword required>
+      <dd><input type=email name=confirmemail value='{{confirmemail}}' required autocomplete="on" id="exampleInputEmail1" placeholder="Confirm Email">
+      <dd><input type=password name=password required placeholder="Password" minlength="6" maxlength="20">
+      <dd><input type=password name=confirmpassword required placeholder="Confirm Password">
       <dd><input type=submit value=signup>
     </dl>
   </form>
