--- a/dvJudge/templates/problem.html
+++ b/dvJudge/templates/problem.html
@@ -1,33 +1,53 @@
 {% extends "layout.html" %}
 {% block body %}
+
+<script type="text/javascript">
+$(document).ready(function(){ 
+    $("#myTab a").click(function(e){
+      e.preventDefault();
+      $(this).tab('show');
+    });
+});
+</script>
+
   <div class="container">
-    <form action="{{ url_for('submit_specific_problem', problem_id=problem_info.problem_id) }}" method=post class=problem>
+    
 
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
+        <h1>{{ problem_info.name }}</h1>
+        
+        <ul class="nav nav-tabs">
+          <li class="active"><a data-toggle="tab" href="#Desc">Description</a></li>
+          <li><a data-toggle="tab" href="#IO">Input/Output</a></li>
+        </ul>
+
+        <div class="tab-content">
+          <div id="Desc" class="tab-pane fade in active">
+            <h3>HOME</h3>
+            <p>{{ problem_info.description }}</p>
+          </div>
+          <div id="IO" class="tab-pane fade">
+            <p>{{ problem_info.input_desc }}</p>
+            <p>{{ problem_info.output_desc }}</p>
+            <p>{{ problem_info.sample_tests }}</p>
+          </div>
+        </div>
+
       </div>
     </div>
-
-
-      <dl>
-        <h1> {{ problem_info.name }} </h1>
-          <p> {{ problem_info.description }}
-        {% if code %}
-          <dd><textarea name=text rows=20 cols=60>{{ code }}</textarea>
-        {% else %} 
-          <dd><textarea name=text rows=20 cols=60></textarea>
-        {% endif %}
-        <dd><input type=submit value=Submit>
-      </dl>
-    </form>
-    {% if session.logged_in %}
-      <h2> "You are Logged In" </h2>
-    {% endif %}
-    {% if result %}
-      <pre> {{ result }} </pre>
-    {% endif %}
+    <div class="container">
+      <!-- Example row of columns -->
+      <form action="{{ url_for('submit_specific_problem', problem_id=problem_info.problem_id) }}" method=post class=problem>
+        <div class="form-group">
+          {% if code %}
+            <dd><textarea name=text rows=20 cols=60>{{ code }}</textarea>
+          {% else %}  
+            <dd><textarea name=text rows=20 cols=60></textarea>
+          {% endif %}
+          <p><a type=submit class="btn btn-default" href="#" role="button">Submit »</a></p>
+        </div>
+      </form>
+      
   </div>
 {% endblock %}
