--- a/dvJudge/templates/signup.html
+++ b/dvJudge/templates/signup.html
@@ -2,14 +2,30 @@
 {% block body %}
   <h2>Sign up</h2>
   {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
-  <form action="{{ url_for('signup') }}" method=post>
-    <dl>
-      <dd><input type=text name=username value='{{username}}' required  placeholder="Username">
-      <dd><input type=email name=email value='{{email}}' required autocomplete="on" id="exampleInputEmail1" placeholder="Email">
-      <dd><input type=email name=confirmemail value='{{confirmemail}}' required autocomplete="on" id="exampleInputEmail1" placeholder="Confirm Email">
-      <dd><input type=password name=password required placeholder="Password" minlength="6" maxlength="20">
-      <dd><input type=password name=confirmpassword required placeholder="Confirm Password">
-      <dd><input type=submit value=signup>
-    </dl>
-  </form>
+  <div class="form-group">
+    <form action="{{ url_for('signup') }}" method=post>
+      <dl>
+        <div class="form-group">
+          <dt>Username
+          <dd><input type=text class="form-control" name=username value='{{username}}' required  placeholder="Username">
+        </div>
+
+        <div class="form-group">
+          <dt>Email
+          <dd><input type=email name=email value='{{email}}' required autocomplete="on" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          <dd><input type=email class="form-control" name=confirmemail value='{{confirmemail}}' required autocomplete="on" id="exampleInputEmail1" placeholder="Confirm Email">
+        </div>
+
+        <div class="form-group">
+          <dt>Password
+          <dd><input type=password class="form-control" name=password required placeholder="Password" minlength="6" maxlength="20">
+          <dd><input type=password class="form-control" name=confirmpassword required placeholder="Confirm Password">
+        </div>
+
+        <div class="form-group">
+          <dd><input type=submit class="btn btn-default" value=Submit>
+        </div>
+      </dl>
+    </form>
+  </div>
 {% endblock %}
