--- a/dvJudge/templates/show_mainpage.html
+++ b/dvJudge/templates/show_mainpage.html
@@ -1,5 +1,10 @@
 {% extends "layout.html" %}
 {% block body %}
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Welcome</h1>
+      </div>
+    </div>
   <dd><a href="upload">UPLOAD CODE</a>
   <dd><a href="browse">BROWSE PROBLEMS</a>
 {% endblock %}
