--- a/dvJudge/templates/upload_problem.html
+++ b/dvJudge/templates/upload_problem.html
@@ -28,43 +28,42 @@
       <div class="form-group">
         <label for="challenge_name" class="col-sm-2 control-label">Challenge Name</label>
         <div class="col-sm-10">
-          <input class="form-control" id="challenge_name" placeholder="Challenge Name">
+          <input name="challenge_name" class="form-control" id="challenge_name" placeholder="Challenge Name">
         </div>
       </div>
       <div class="form-group">
         <label for="description" class="col-sm-2 control-label">Description</label>
         <div class="col-sm-10">
-          <textarea class="form-control" rows="3" id="description" placeholder="Description..."></textarea>
+          <textarea name="description" class="form-control" rows="3" id="description" placeholder="Description..."></textarea>
         </div>
       </div>
       <div class="form-group">
         <label for="input_" class="col-sm-2 control-label">Input</label>
         <div class="col-sm-10">
-          <textarea class="form-control" rows="3" id="input_" placeholder="The input..."></textarea>
+          <textarea name="input_" class="form-control" rows="3" id="input_" placeholder="The input..."></textarea>
         </div>
       </div>
       <div class="form-group">
         <label for="output_" class="col-sm-2 control-label">Ouput</label>
         <div class="col-sm-10">
-          <textarea class="form-control" rows="3" id="output_" placeholder="What you expect"></textarea>
+          <textarea name="output_" class="form-control" rows="3" id="output_" placeholder="What you expect"></textarea>
         </div>
       </div>
       <div class="form-group">
-      <div class="form-group">
         <label for="tnput_desc" class="col-sm-2 control-label">Input Description</label>
         <div class="col-sm-10">
-          <input class="form-control" id="tnput_desc" placeholder="Input Description">
+          <input name="input_desc" class="form-control" id="tnput_desc" placeholder="Input Description">
         </div>
       </div>
       <div class="form-group">
         <label for="output_desc" class="col-sm-2 control-label">Output Description</label>
         <div class="col-sm-10">
-          <input class="form-control" id="output_desc" placeholder="Output Description">
+          <input name="output_desc" class="form-control" id="output_desc" placeholder="Output Description">
         </div>
       </div>
       <label for="tests" class="col-sm-2 control-label">Sample Tests</label>
         <div class="col-sm-10">
-          <textarea class="form-control" rows="3" id="tests" placeholder="Add Sample Tests Here"></textarea>
+          <textarea name="tests" class="form-control" rows="3" id="tests" placeholder="Add Sample Tests Here"></textarea>
         </div>
       </div>
       <div class="form-group">
