--- a/dvJudge/templates/layout.html
+++ b/dvJudge/templates/layout.html
@@ -23,20 +23,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/browse">Challenges<span class="sr-only">(current)</span></a></li>
+        <li><a href="/browse">Challenges<span class="sr-only">(current)</span></a></li>
         <li><a href="#">Competitions(empty)</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Empty<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
       </ul>
       <form class="navbar-form navbar-left" role="search" action="{{ url_for('browse') }}" method=post>
         <div class="form-group">
@@ -51,7 +39,8 @@
 
       <ul class="nav navbar-nav navbar-right">
           {% if not session.logged_in %}
-         <li><a href="{{ url_for('login') }}">log in</a></li>
+         <li><a href="{{ url_for('login') }}">Log in</a></li>
+         <li><a href="{{ url_for('signup') }}">Sign up</a></li>
           {% else %}
             <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile(empty) <span class="caret"></span></a>
@@ -71,7 +60,6 @@
   </div><!-- /.container-fluid -->
 </nav>
 <div class=page>
-  <h1>DVJUDGE</h1>
   {% for message in get_flashed_messages() %}
     <div class=flash>{{ message }}</div>
   {% endfor %}
