--- a/dvJudge/templates/login.html
+++ b/dvJudge/templates/login.html
@@ -7,14 +7,14 @@
       <dl>
         <div class="form-group">
           <dt>Username:
-          <dd><input type=text name=username id="exampleInputEmail1" placeholder="Email" required>
+          <dd><input type=text name=username class="form-control" placeholder="Username" required>
         </div>
         <div class="form-group">
           <dt>Password:
-          <dd><input type=password name=password id="exampleInputPassword1" placeholder="Password" required>
+          <dd><input type=password name=password class="form-control" placeholder="Password" required>
         </div>
         <div class="form-group">
-          <dd><input type=submit value=Login>
+          <dd><input class="form-control" type=submit value=Login>
         </div>
       </dl>
     </form>
