--- a/dvJudge/templates/problem.html
+++ b/dvJudge/templates/problem.html
@@ -32,7 +32,7 @@
           {% else %}  
             <dd><textarea name=text rows=20 cols=60></textarea>
           {% endif %}
-          <p><a type=submit class="btn btn-default" href="#" role="button">Submit »</a></p>
+          <p><input type=submit value=submit class="btn btn-default" role="button"></p>
         </div>
       </form>
       
