--- a/dvjudge/templates/upload_problem.html
+++ b/dvjudge/templates/upload_problem.html
@@ -28,7 +28,11 @@
       <div class="form-group">
         <label for="challenge_name" class="col-sm-2 control-label">Challenge Name</label>
         <div class="col-sm-10">
-          <input name="challenge_name" class="form-control" id="challenge_name" placeholder="Challenge Name">
+          {% if challenge_name %}
+            <input name="challenge_name" class="form-control" id="challenge_name" value={{challenge_name}}>
+          {% else %}
+            <input name="challenge_name" class="form-control" id="challenge_name" placeholder="Challenge Name">
+          {% endif %}
         </div>
       </div>
       <div class="form-group">
