[DVJ-15], [DVJ-17], [DVJ-18] -implemented submit.py which currently     -creates a directory submissions     -creates a file submission.c     -dumps the user input in that file     -compiles it with gcc     -if no errors         -creates a 'tests' folder and 'test' file         -puts some junk in it         -runs the program with the created test file     -outputs error message or the output of the program     -removes submissions and tests folders and their content -added appropriate sections for message output to problem.html - no styling- and browse.py -added basic tests to dvjudge_tests.py

--- a/dvjudge/templates/problem.html
+++ b/dvjudge/templates/problem.html
@@ -20,9 +20,13 @@
             <p>{{ problem_info.sample_tests }}</p>
           </div>
         </div>
-
       </div>
     </div>
+    {% if output %}
+     <div class="container">
+        <h1>{{ output }}</h1>
+    </div>
+    {% endif %}
     <div class="container">
       <!-- Example row of columns -->
       <form action="{{ url_for('submit_specific_problem', problem_id=problem_info.problem_id) }}" method=post class=problem>
