Change website structure to implement community features

--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -25,6 +25,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/browse">Challenges<span class="sr-only">(current)</span></a></li>
         <li><a href="#">Competitions(empty)</a></li>
+        <li><a href="/community">Community</a></li>
       </ul>
       <form class="navbar-form navbar-left" role="search" action="{{ url_for('browse') }}" method=post>
         <div class="form-group">
