--- a/dvjudge/templates/browse.html
+++ b/dvjudge/templates/browse.html
@@ -1,47 +1,37 @@
 
 {% extends "layout.html" %}
 {% block body %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Example of Bootstrap 3 Tables with Alternate Background</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<style type="text/css">
-    .bs-example{
-      margin: 20px;
-    }
-</style>
-</head>
-<body>
-<div class="bs-example">
-    <table class="table table-striped">
-        <thead>
+  <div class="container">
+    {% if com_flag %}
+      <h2>Browse Challenges</h2>
+    {% else %}
+      <h2>Browse Community Challenges</h2>
+    {% endif %}
+  </div>
+
+  <div class="bs-example">
+      <table class="table table-striped">
+          <thead>
+              <tr>
+                  <th>#</th>
+                  <th>Title</th>
+                  <th>Submitter</th>
+                  <th>Completed</th>
+              </tr>
+          </thead>
+          <tbody>
+            <ul class=challenges>
+            {% for problem in challenges %}
             <tr>
-                <th>#</th>
-                <th>Title</th>
-                <th>Submitter</th>
-                <th>Completed</th>
+              {# Both of the following links should link to browse/<problem_name> #}
+              <td><b><a href="browse/{{ problem.name }}">{{ problem.id }}</a></b></td>
+              <td><a href="browse/{{ problem.name }}">{{ problem.name }}</a></td>
+              <td>Stanley</td>
+              <td>Nope</td>
             </tr>
-        </thead>
-        <tbody>
-          <ul class=challenges>
-          {% for problem in challenges %}
-          <tr>
-            {# Both of the following links should link to browse/<problem_name> #}
-            <td><b><a href="browse/{{ problem.name }}">{{ problem.id }}</a></b></td>
-            <td><a href="browse/{{ problem.name }}">{{ problem.name }}</a></td>
-            <td>Stanley</td>
-            <td>Nope</td>
-          </tr>
-          {% endfor %}
-          </ul>
-        </tbody>
-    </table>
-</div>
-</body>
-</html>                                   
+            {% endfor %}
+            </ul>
+          </tbody>
+      </table>
+  </div>
 {% endblock %}                             
