DVJ-66 - implemented running tests against the submission - and each submission goes into separate folder

--- a/dvjudge/templates/problem.html
+++ b/dvjudge/templates/problem.html
@@ -24,7 +24,7 @@
     </div>
     {% if output %}
      <div class="container">
-        <h1>{{ output }}</h1>
+        <pre>{{ output }}</pre>
     </div>
     {% endif %}
     <div class="container">
