Remove login/singup pages and replace with nice floating for

--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -30,17 +30,153 @@
         <div class="form-group">
           {% if searchterm %} 
         <input type="text" name="searchterm" value="{{searchterm}}" class="form-control">
-      {% else %}
+        {% else %}
         <input type="text" name="searchterm">
-      {% endif %}
+        {% endif %}
         </div>
         <button type="submit" class="btn btn-default">Search</button>
       </form>
 
       <ul class="nav navbar-nav navbar-right">
           {% if not session.logged_in %}
-         <li><a href="{{ url_for('login') }}">Log in</a></li>
-         <li><a href="{{ url_for('signup') }}">Sign up</a></li>
+         <!--li><a href="{{ url_for('login') }}">Log in</a></li-->
+         <!--li><a href="{{ url_for('signup') }}">Sign up</a></li-->
+        <button class="btn btn-primary btn-lg" href="#signup" data-toggle="modal" data-target=".bs-modal-sm">Sign In/Register</button>
+
+<!-- Modal -->
+<div class="modal fade bs-modal-sm" id="myModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+        <br>
+        <div class="bs-example bs-example-tabs">
+            <ul id="myTab" class="nav nav-tabs">
+              <li class="active"><a href="#signin" data-toggle="tab">Sign In</a></li>
+              <li class=""><a href="#signup" data-toggle="tab">Register</a></li>
+              <!--li class=""><a href="#why" data-toggle="tab">Why?</a></li-->
+            </ul>
+        </div>
+      <div class="modal-body">
+        <div id="myTabContent" class="tab-content">
+        <!--div class="tab-pane fade in" id="why">
+        <p>We need this information so that you can receive access to the site and its content. Rest assured your information will not be sold, traded, or given to anyone.</p>
+        <p></p><br> Please contact <a mailto:href="JoeSixPack@Sixpacksrus.com"></a>JoeSixPack@Sixpacksrus.com</a> for any other inquiries.</p>
+        </div-->
+        <div class="tab-pane fade active in" id="signin">
+            <form class="form-horizontal" action="{{ url_for('login_signup_form') }}" method=post>
+              <input type="hidden" name="page" value="{{ request.url_rule.endpoint }}">
+
+            <fieldset>
+            <!-- Sign In Form -->
+            <!-- Text input-->
+            <div class="control-group">
+              <label class="control-label" for="userid">Username/Email:</label>
+              <div class="controls">
+                <input required="" id="userid" name="username" type="text" class="form-control" placeholder="DarthVader2" class="input-medium" required="">
+              </div>
+            </div>
+
+            <!-- Password input-->
+            <div class="control-group">
+              <label class="control-label" for="passwordinput">Password:</label>
+              <div class="controls">
+                <input required="" id="passwordinput" name="password" class="form-control" type="password" placeholder="********" class="input-medium">
+              </div>
+            </div>
+
+            <!-- Multiple Checkboxes (inline) -->
+            <!--div class="control-group">
+              <label class="control-label" for="rememberme"></label>
+              <div class="controls">
+                <label class="checkbox inline" for="rememberme-0">
+                  <input type="checkbox" name="rememberme" id="rememberme-0" value="Remember me">
+                  Remember me
+                </label>
+              </div>
+            </div-->
+
+            <!-- Button -->
+            <div class="control-group">
+              <label class="control-label" for="signin"></label>
+              <div class="controls">
+                <button id="signin" name="submit" class="btn btn-success" value="signin" type=submit>Sign In</button>
+              </div>
+            </div>
+            </fieldset>
+            </form>
+        </div>
+
+        <div class="tab-pane fade" id="signup">
+            <form class="form-horizontal" action="{{ url_for('login_signup_form') }}" method=post>
+            <fieldset>
+            <!-- Sign Up Form -->
+            <!-- Text input-->
+            <div class="control-group">
+              <label class="control-label" for="Email">Email:</label>
+              <div class="controls">
+                <input id="email" name="email" class="form-control" type="email" placeholder="darthvader2@deathstar.com" class="input-large" required="">
+              </div>
+            </div>
+            
+            <!-- Text input-->
+            <div class="control-group">
+              <label class="control-label" for="userid">Username:</label>
+              <div class="controls">
+                <input id="userid" name="username" class="form-control" type="text" placeholder="DarthVader2" class="input-large" required="">
+              </div>
+            </div>
+            
+            <!-- Password input-->
+            <div class="control-group">
+              <label class="control-label" for="password">Password:</label>
+              <div class="controls">
+                <input id="password" name="password" class="form-control" type="password" placeholder="********" class="input-large" required="">
+                <em>1-8 Characters</em>
+              </div>
+            </div>
+            
+            <!-- Text input-->
+            <div class="control-group">
+              <label class="control-label" for="confirmpassword">Re-Enter Password:</label>
+              <div class="controls">
+                <input id="confirmpassword" class="form-control" name="confirmpassword" type="password" placeholder="********" class="input-large" required="">
+              </div>
+            </div>
+            
+            <!-- Multiple Radios (inline) -->
+            <!--br>
+            <div class="control-group">
+              <label class="control-label" for="humancheck">Humanity Check:</label>
+              <div class="controls">
+                <label class="radio inline" for="humancheck-0">
+                  <input type="radio" name="humancheck" id="humancheck-0" value="robot" checked="checked">I'm a Robot</label>
+                <label class="radio inline" for="humancheck-1">
+                  <input type="radio" name="humancheck" id="humancheck-1" value="human">I'm Human</label>
+              </div>
+            </div-->
+            
+            <!-- Button -->
+            <div class="control-group">
+              <label class="control-label" for="confirmsignup"></label>
+              <div class="controls">
+                <button id="confirmsignup" name="submit" class="btn btn-success" value="signup">Sign Up</button>
+              </div>
+            </div>
+            </fieldset>
+            </form>
+      </div>
+    </div>
+      </div>
+      <div class="modal-footer">
+      <center>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </center>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
           {% else %}
             <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile(empty) <span class="caret"></span></a>
@@ -63,5 +199,8 @@
   {% for message in get_flashed_messages() %}
     <div class=flash>{{ message }}</div>
   {% endfor %}
+  <div class="container">
+      {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
+    </div>
   {% block body %}{% endblock %}
 </div>
