DVJ-67 This change set introduces playlists and includes the backend functionality to create, and add challenges to a playlist.
- Functionality to actually add a problem to a playlist is not yet implemented.
- Frontend for creating playlists is not currently implemented
- Frontend for viewing a playlist in detail is not currently implemented

- Added functionality to add a challenge to a playlist via the challenge's details page, It currently
    is not functional, it is only for display but does show the owner's playlists.
- Added tests for the challenge details page showing the right playlists for this user
- Added tests for creating a new playlist updating the challenge page playlists correctly.

--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -24,9 +24,12 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/browse">Challenges<span class="sr-only">(current)</span></a></li>
-          {% if session.logged_in %}
-            <li><a href="/submissions">Submissions</a></li>
-          {% endif %}
+        {% if session.logged_in %}
+          <li><a href="/submissions">Submissions</a></li>
+        {% endif %}
+        {% if session.logged_in %}
+          <li><a href="/playlists">Playlists</a></li>
+        {% endif %}
       </ul>
       <form class="navbar-form navbar-left" role="search" action="{{ url_for('browse') }}" method=post>
         <div class="form-group">
