Fixed a bug when reordering with multiple playlists

--- a/dvjudge/templates/playlists.html
+++ b/dvjudge/templates/playlists.html
@@ -52,6 +52,7 @@
     	</table> 
     	</div>
       <div align="right">
+        <input type="hidden" name="selected_name" value="{{ selection.name }}"/>
         <input type="submit" name="reorder" id="sub" value="Submit Changes" class="btn btn-submit btn-default"/>
       </div>
     </form>
