--- a/dvjudge/templates/problem.html
+++ b/dvjudge/templates/problem.html
@@ -27,15 +27,16 @@
   {% endif %}
   <div class="container">
     <!-- Example row of columns -->
-    <form action="{{ url_for('submit_specific_problem', problem_id=problem_info.problem_id) }}" method=post class=problem>
-      <div class="form-group">
-        {% if code %}
-          <dd><textarea name=text rows=20 cols=60>{{ code }}</textarea>
-        {% else %}
-          <dd><textarea name=text rows=20 cols=60></textarea>
-        {% endif %}
-        <p><input type=submit value=submit class="btn btn-default" role="button"></p>
-      </div>
-    </form>
+
+
+<div id="editor" style="height: 500px; width: 500px">some text</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/ace.js" type="text/javascript" charset="utf-8"></script>
+<script>
+    var editor = ace.edit("editor");
+    editor.setTheme("ace/theme/github");
+    editor.getSession().setMode("ace/mode/c++");
+</script>
+
+
   </div>
 {% endblock %}
